fixed graphical bugs on mobile.

--- a/src/Components/Nav/styles.css
+++ b/src/Components/Nav/styles.css
@@ -9,7 +9,11 @@
   position: sticky;
   top: 0;
   z-index: 2;
+  transition: 0.5s;
 
+}
+:global(.Hide) {
+  transform: translateY(-40%);
 }
 .Container__MenuButton {
   background: transparent;
@@ -101,5 +105,8 @@
   .Container__Header {
     margin: 0 0 1rem;
     font-size: 3rem;
+  }
+  .Container__SearchIcon {
+    margin: 0 0.5rem;
   }
 }
