--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -41,17 +41,17 @@
   flex-direction: column;
   align-items: center;
 }
-@media(max-width: 99.2rem) {
+@media(max-width: 992px) {
   .Container__NotesCol {
     width: 33%;
   }
 }
-@media(max-width: 76.8rem) {
+@media(max-width: 768px) {
   .Container__NotesCol {
     width: 50%;
   }
 }
-@media(max-width: 50rem) {
+@media(max-width: 500px) {
   .Container__NotesCol {
     width: 100%;
   }
